# CommercialDetector

./: CMakeLists.txt  README.md  README.txt  commercial_detector.cpp  commercial_detector.h  feature_extraction_controller.cpp  feature_extraction_controller.h  main.cpp  similarity_search_controller.cpp  similarity_search_controller.h  util.cpp  util.hpp  video_descriptor_controller.cpp  video_descriptor_controller.h  video_metadata.cpp  video_metadata.h
